--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cosmutics-server",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -8,6 +8,7 @@
     "dev": "node --watch server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0"
