--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0"
