--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "cosmutics-server",
-  "version": "2.0.0",
-  "main": "server.js",
+  "name": "sobhi-cosmutics",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^2.2.1",
-    "cors": "^2.8.5",
-    "json-server": "^0.17.4",
-    "json-server-auth": "^2.1.0"
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.556.0",
+    "node-fetch": "^3.3.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.10.1"
   },
-  "engines": {
-    "node": ">=18.0.0"
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "vite": "^6.0.0"
   }
 }
